--- a/css/app.css
+++ b/css/app.css
@@ -2054,6 +2054,9 @@ a.btn-begin {
 	.reveal-modal .close-reveal span { display: inline-block}
 	.reveal-modal .hiring-content { padding:0; height:85%;}
 	.reveal-modal .hiring-footer { padding:15px; position: absolute; bottom:0; left:0; right:0;}
+	.draggie { box-shadow:0 0 1px #000;}
+	.draggie.drag-prev { left:-145px;}
+	.draggie.drag-next { right:-14px;}
 } 
 
 /* Tablet iPad and Portrait and Medium Screen Media Queries */
