--- a/css/app.css
+++ b/css/app.css
@@ -1190,6 +1190,48 @@ a.btn-begin {
 .flex-video {height:0;overflow:hidden;padding-bottom:65.5%;padding-top:1.5625rem;position:relative}
 .flex-video iframe,.flex-video object,.flex-video embed,.flex-video video{height:100%;position:absolute;top:0;width:100%;left:0}.keystroke,kbd{background-color:#ededed;border-color:#ddd;color:#222;border-style:solid;border-width:1px;font-family:"Consolas","Menlo","Courier",monospace;font-size:inherit;margin:0;padding:0.125rem 0.25rem 0;border-radius:4px}
 
+/* Popup Watch Us */
+.watchus-popup {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    z-index: 98;
+}
+.watchus-popup.active {    
+    display: block;
+}
+.watchus-popup.deactive {    
+    display: none;
+}
+.wp-wrapper {
+    width: 80%;
+    height: 100%;
+    margin: 50px auto;
+}
+.wp-container {
+    width: 80%;
+    height: 80%;
+    padding: 5px;
+    position: absolute;
+    background-color: #fff;
+}
+.watchus-popup .wp-wrapper .wp-container .wp-btnclose {
+    top: -15px;
+    right: -15px;
+    position: absolute;
+    width: 26px;
+	height: 26px;
+	background: url(../img/dragon-button.png) no-repeat center;
+	background-size: cover;
+    background-color: #fff;
+    border-radius: 1000px;
+    -webkit-transform: rotate(225deg);
+	transform: rotate(225deg);
+}
 
 /* Team Buttons & Sliding Popup */
 .dragon {
