--- a/css/app.css
+++ b/css/app.css
@@ -1231,6 +1231,7 @@ a.btn-begin {
     border-radius: 1000px;
     -webkit-transform: rotate(225deg);
 	transform: rotate(225deg);
+    cursor: pointer;
 }
 
 /* Team Buttons & Sliding Popup */
