--- a/css/app.css
+++ b/css/app.css
@@ -940,163 +940,164 @@ body.disable-nav .draggie.drag-next { -webkit-transform:translateX(100px);transf
 	border-radius: 1000px;
 	-webkit-animation: inner-ripple 3s 1.5s infinite linear;
 	animation: inner-ripple 3s 1.5s infinite linear;
-}*/
+	}*/
 
-/* Homepage */
-#dcc-home {
-	-webkit-transition: all cubic-bezier(0.465, 0.183, 0.153, 0.946) 3s;
-	transition: all cubic-bezier(0.465, 0.183, 0.153, 0.946) 3s;
-}
-.dragon-building img {
-	display: block;
-	width:100%;
-}
-.dcc-building {
-	position: relative;
-}
-.dcc-plank {
-	-webkit-transform-style: flat;
-	-webkit-perspective: 800px;
-	-webkit-perspective-origin: 250px 310px;	
-	-ms-transform-style: preserve-3d;
-	-ms-perspective: 800px;
-	-ms-perspective-origin: 250px 310px;
-	-moz-transform-style: preserve-3d;
-	-moz-perspective: 800px;
-	-moz-perspective-origin: 250px 310px;
-	transform-style: preserve-3d;
-	perspective: 800px;
-	perspective-origin: 250px 310px;
+	/* Homepage */
+	#dcc-home {
+		-webkit-transition: all cubic-bezier(0.465, 0.183, 0.153, 0.946) 3s;
+		transition: all cubic-bezier(0.465, 0.183, 0.153, 0.946) 3s;
+	}
+	.dragon-building img {
+		display: block;
+		width:100%;
+	}
+	.dcc-building {
+		position: relative;
+	}
+	.dcc-plank {
+		-webkit-transform-style: flat;
+		-webkit-perspective: 800px;
+		-webkit-perspective-origin: 250px 310px;	
+		-ms-transform-style: preserve-3d;
+		-ms-perspective: 800px;
+		-ms-perspective-origin: 250px 310px;
+		-moz-transform-style: preserve-3d;
+		-moz-perspective: 800px;
+		-moz-perspective-origin: 250px 310px;
+		transform-style: preserve-3d;
+		perspective: 800px;
+		perspective-origin: 250px 310px;
 
-	position: absolute;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-	bottom: 77.5%;
-	overflow: visible !important;
-	
-	z-index: 98;
-	left: 50%;
-	margin-left:-250px;
-	width: 500px;
-	height: 218px;
-}
-.start-now {
-	width: 100%;
-	height: 100%;
-	display: block;
-	-webkit-transform: rotate3d(1, 0, 0, 20deg) skewX(4deg);
-	transform: rotate3d(1, 0, 0, 20deg) skewX(4deg);
-	-webkit-box-shadow: 1px 1px 2px #666;
-	box-shadow: 1px 1px 2px #666;
-	position: relative;
-}
-.start-now img {
-	display: block;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-	backface-visibility: hidden;
-}
-.start-now span {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 1;
-	display: block;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-	backface-visibility: hidden
-}
-.start-now .on {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 3;
-	display: block;
-	background-size: cover;
-	-webkit-animation: blinking 10s infinite linear;
-	animation: blinking 10s infinite linear;
-}
-.start-now .on2x {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	display: none;
-	z-index: 5;
-	background-size: cover;
-}
-.start-now:hover .on2x {
-	display: block;
-}
+		position: absolute;
+		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
+		bottom: 77.5%;
+		overflow: visible !important;
+		
+		z-index: 98;
+		left: 50%;
+		margin-left:-250px;
+		width: 500px;
+		height: 218px;
+	}
+	.start-now {
+		width: 100%;
+		height: 100%;
+		display: block;
+		-webkit-transform: rotate3d(1, 0, 0, 20deg) skewX(4deg);
+		transform: rotate3d(1, 0, 0, 20deg) skewX(4deg);
+		-webkit-box-shadow: 1px 1px 2px #666;
+		box-shadow: 1px 1px 2px #666;
+		position: relative;
+	}
+	.start-now img {
+		display: block;
+		-webkit-transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0);
+		backface-visibility: hidden;
+	}
+	.start-now span {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: 1;
+		display: block;
+		-webkit-transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0);
+		backface-visibility: hidden
+	}
+	.start-now .on {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: 3;
+		display: block;
+		background-size: cover;
+		-webkit-animation: blinking 10s infinite linear;
+		animation: blinking 10s infinite linear;
+	}
+	.start-now .on2x {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		display: none;
+		z-index: 5;
+		background-size: cover;
+	}
+	.start-now:hover .on2x {
+		display: block;
+	}
 
-/* Zeppelin */
-.dcc-zeppelin {
-	position: absolute; 
-	top: 0;
-	width: 100%;
-	-webkit-animation: planetarium 2s infinite;
-	animation: planetarium 2s infinite;
-}
-.dcc-zeppelin .front-zeppelin { 
-	position: absolute; 
-	width: 300px;
-	-webkit-animation: front-zeppelin 40s linear infinite;
-	animation: front-zeppelin 40s linear infinite;
-}
-.dcc-zeppelin .back-zeppelin { 
-	position: absolute; 
-	width: 300px;
-	-webkit-animation: back-zeppelin 40s linear infinite;
-	-webkit-animation-delay: 20s;
-	animation: back-zeppelin 40s linear infinite;
-	animation-delay: 20s;
-	opacity: 0;
-}
-.dcc-zeppelin .front-zeppelin .zep-img {height: 121px; padding-right: 10px;}
-.dcc-zeppelin .front-zeppelin .zep-img img {height: 121px;}
-.dcc-zeppelin .front-zeppelin .zep-led {width: 100%; text-align: center; margin-top:-5px;
-	
-}
-.dcc-zeppelin .front-zeppelin .zep-led img {width: 50%;}
-.zep-led > a { display: block; position: relative; text-align: center;
-	-webkit-transform-style: flat;
-	-webkit-perspective: 800px;
-	-webkit-perspective-origin: 150px 250px;	
-	-ms-transform-style: preserve-3d;
-	-ms-perspective: 800px;
-	-ms-perspective-origin: 150px 250px;
-	-moz-transform-style: preserve-3d;
-	-moz-perspective: 800px;
-	-moz-perspective-origin: 150px 250px;
-	transform-style: preserve-3d;
-	perspective: 800px;
-	perspective-origin: 150px 250px;
-}
-.zep-led .monitor { width:300px; height:218px; background:url(../img/zeppelin-monitor.jpg) no-repeat left center; 
-	-webkit-transform-origin:50% 0;
-	transform-origin:50% 0;
-	transform:scale(.75) rotate3d(1, 0, 0, 15deg);
-	-webkit-animation:mascot 4s steps(3) infinite;
-	animation:mascot 4s steps(3) infinite;
-	display: block;
-	-webkit-box-shadow: 1px 1px 2px #666;
-	box-shadow: 1px 1px 2px #666;
-}
+	/* Zeppelin */
+	.dcc-zeppelin {
+		position: absolute; 
+		top: 0;
+		width: 100%;
+		-webkit-animation: planetarium 2s infinite;
+		animation: planetarium 2s infinite;
+	}
+	.dcc-zeppelin .front-zeppelin { 
+		position: absolute; 
+		width: 300px;
+		-webkit-animation: front-zeppelin 40s linear infinite;
+		animation: front-zeppelin 40s linear infinite;
+	}
+	.dcc-zeppelin .back-zeppelin { 
+		position: absolute; 
+		width: 300px;
+		-webkit-animation: back-zeppelin 40s linear infinite;
+		-webkit-animation-delay: 20s;
+		animation: back-zeppelin 40s linear infinite;
+		animation-delay: 20s;
+		opacity: 0;
+	}
+	.dcc-zeppelin .front-zeppelin .zep-img {height: 121px; padding-right: 10px;}
+	.dcc-zeppelin .front-zeppelin .zep-img img {height: 121px;}
+	.dcc-zeppelin .front-zeppelin .zep-led {width: 100%; text-align: center; margin-top:-5px;
+		
+	}
+	.dcc-zeppelin .front-zeppelin .zep-led img {width: 50%;}
+	.zep-led > a { display: block; position: relative; text-align: center;
+		-webkit-transform-style: flat;
+		-webkit-perspective: 800px;
+		-webkit-perspective-origin: 150px 250px;	
+		-ms-transform-style: preserve-3d;
+		-ms-perspective: 800px;
+		-ms-perspective-origin: 150px 250px;
+		-moz-transform-style: preserve-3d;
+		-moz-perspective: 800px;
+		-moz-perspective-origin: 150px 250px;
+		transform-style: preserve-3d;
+		perspective: 800px;
+		perspective-origin: 150px 250px;
+	}
+	.zep-led .monitor { width:300px; height:218px; background:url(../img/zeppelin-monitor.jpg) no-repeat left center; 
+		-webkit-transform-origin:50% 0;
+		transform-origin:50% 0;
+		-webkit-transform:scale(.75) rotate3d(1, 0, 0, 15deg);
+		transform:scale(.75) rotate3d(1, 0, 0, 15deg);
+		-webkit-animation:mascot 4s steps(3) infinite;
+		animation:mascot 4s steps(3) infinite;
+		display: block;
+		-webkit-box-shadow: 1px 1px 2px #666;
+		box-shadow: 1px 1px 2px #666;
+	}
 
-/* Lobby Section */
-#lobby-content {
-	position: absolute;
-	width: 40%;
-	top: 15%;
-	left: 30%;
-	padding: 1rem 2rem;
-	text-align: center;
-	text-shadow:-2px 1px 2px rgba(0,0,0,.3);
+	/* Lobby Section */
+	#lobby-content {
+		position: absolute;
+		width: 40%;
+		top: 15%;
+		left: 30%;
+		padding: 1rem 2rem;
+		text-align: center;
+		text-shadow:-2px 1px 2px rgba(0,0,0,.3);
 /*
 	background:url(../img/lobby-monitor.png) no-repeat center;
 	background-size:cover;
@@ -1190,49 +1191,49 @@ a.btn-begin {
 .flex-video {height:0;overflow:hidden;padding-bottom:65.5%;padding-top:1.5625rem;position:relative}
 .flex-video iframe,.flex-video object,.flex-video embed,.flex-video video{height:100%;position:absolute;top:0;width:100%;left:0}.keystroke,kbd{background-color:#ededed;border-color:#ddd;color:#222;border-style:solid;border-width:1px;font-family:"Consolas","Menlo","Courier",monospace;font-size:inherit;margin:0;padding:0.125rem 0.25rem 0;border-radius:4px}
 
-/* Popup Watch Us */
 .watchus-popup {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0,0,0,0.7);
-    width: 100%;
-    height: 100%;
-    z-index: 98;
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: rgba(0,0,0,0.7);
+	width: 100%;
+	height: 100%;
+	z-index: 98;
 }
 .watchus-popup.active {    
-    display: block;
+	display: block;
 }
 .watchus-popup.deactive {    
-    display: none;
+	display: none;
 }
 .wp-wrapper {
-    width: 80%;
-    height: 100%;
-    margin: 50px auto;
+	width: 80%;
+	height: 100%;
+	margin: 50px auto;
 }
 .wp-container {
-    width: 80%;
-    height: 80%;
-    padding: 5px;
-    position: absolute;
-    background-color: #fff;
+	width: 80%;
+	height: 80%;
+	padding: 5px;
+	position: absolute;
+	background-color: #fff;
 }
 .watchus-popup .wp-wrapper .wp-container .wp-btnclose {
-    top: -15px;
-    right: -15px;
-    position: absolute;
-    width: 26px;
+	top: -15px;
+	right: -15px;
+	position: absolute;
+	width: 26px;
 	height: 26px;
 	background: url(../img/dragon-button.png) no-repeat center;
 	background-size: cover;
-    background-color: #fff;
-    border-radius: 1000px;
-    -webkit-transform: rotate(225deg);
+	background-color: #fff;
+	border-radius: 1000px;
+	-webkit-transform: rotate(225deg);
 	transform: rotate(225deg);
-    cursor: pointer;
+	cursor: pointer;
 }
+
 
 /* Team Buttons & Sliding Popup */
 .dragon {
@@ -1474,12 +1475,13 @@ a.btn-begin {
 	height:300px;
 	background-size:1000px 300px;
 	background:url(../img/rocket-fire.png) no-repeat left top;
-	transform:translate3d(0,-100px,0) scale(0);
+	-webkit-transform:translate3d(0,-30%,0) scale(0);
+	transform:translate3d(0,-30%,0) scale(0);
 }
 .rocket-smoke {	
 	position: absolute;
 	left:50%;
-	z-index: 7;
+	z-index:3;
 	margin-left:-600px;
 	bottom:0;
 }
@@ -1503,7 +1505,10 @@ a.btn-begin {
 .rocket-holder.active .fire-animation {
 	-webkit-animation:2s steps(9, end) 0s normal none infinite running mascot;
 	animation:2s steps(9, end) 0s normal none infinite running mascot;
-	transform:translate3d(0,120px,0) scale(1);
+	-webkit-transform:translate3d(0,40%,0) scale(1);
+	-webkit-transition:transform ease 3s;
+	-webkit-transition-delay:3s;
+	transform:translate3d(0,40%,0) scale(1);
 	transition:transform ease 3s;
 	transition-delay:3s;
 }
@@ -1517,21 +1522,27 @@ a.btn-begin {
 	animation-delay:1s;
 }
 .btn-launch {
-	width: 102px;
-	height: 102px;
+	width: 0.51%;
+	height: 0.159375%;
 	position: absolute;
 	top: 26%;
-	left: 50%;
-	margin-left: -56px;
-	z-index: 7;
+	left: 49%;
+	margin-left: -50px;
+	z-index: 15;
+}
+.btn-launch.rippling:before {
+	width:100%;
+	height:100%;
+	margin-left:-50%;
+	margin-top:-50%;
 }
 .btn-launch span {
 	position: relative;
 	z-index: 5;
 	text-indent: -9999px;
 	display: block;
-	width: 102px;
-	height: 102px;
+	width: 100%;
+	height: 100%;
 	background: url(../img/launch-button.png) no-repeat center;
 	background-size: cover;
 }
@@ -2107,6 +2118,8 @@ a.btn-begin {
 	.draggie { box-shadow:0 0 1px #000;}
 	.draggie.drag-prev { left:-145px;}
 	.draggie.drag-next { right:-145px;}
+
+	.draggable { }
 } 
 
 /* Tablet iPad and Portrait and Medium Screen Media Queries */
