--- a/css/app.css
+++ b/css/app.css
@@ -1262,7 +1262,8 @@ a.btn-begin {
 	-webkit-transition: all .6s cubic-bezier(0.465, 0.183, 0.153, 0.946);
 	transition: all .6s cubic-bezier(0.465, 0.183, 0.153, 0.946);
 	-webkit-animation: planetarium 4s infinite cubic-bezier(0.455, 0.03, 0.515, 0.955);
-	animation: planetarium 4s infinite cubic-bezier(0.455, 0.03, 0.515, 0.955)
+	animation: planetarium 4s infinite cubic-bezier(0.455, 0.03, 0.515, 0.955);
+	cursor:pointer;
 }
 .popup-content {
 	border: 2px solid #939598;
