--- a/css/app.css
+++ b/css/app.css
@@ -1203,6 +1203,7 @@ a.btn-begin {
 	width: 100%;
 	height: 100%;
 	z-index: 98;
+	cursor:pointer;
 }
 .watchus-popup.active {    
 	display: block;
