--- a/css/app.css
+++ b/css/app.css
@@ -2144,6 +2144,26 @@ a.btn-begin {
 	}
 }
 
+@media only screen and (max-width:640px) and (orientation:landscape){
+	.team-reveal-modal img {
+		float:left; display:block; height:100%; width:40%;
+	}
+	.team-reveal-modal .details {
+		text-align: left;
+		float:right; width:60%;
+		height:100%;
+		position: relative;
+		padding:0 15px;
+	}
+	.team-reveal-modal:after { clear:both; display: table; content:"";}
+
+	.reveal-modal {
+		position: absolute; top:0; right:0; bottom:0; left:0;
+		padding:36px 15px 15px;
+		width:100%; margin:0 !important; border-radius:0; border:none;
+	}
+}
+
 @media only screen and (max-width:600px){
 	#dcc-lobby h2 {
 		color:#fff;
