--- a/css/app.css
+++ b/css/app.css
@@ -139,19 +139,33 @@
 @-webkit-keyframes smoke {
 	0% {
 		background-position: left center;
+		opacity: 0;
+	}
+	1% {
+		opacity: 1
+	}
+	99% {
+		opacity: 1;
 	}
 	100% {
 		background-position: right center;
-		
+		opacity: 0;
 	}
 }
 @keyframes smoke {
 	0% {
 		background-position: left center;
+		opacity: 0;
 	}
-	
+	1% {
+		opacity: 1;
+	}
+	99% {
+		opacity: 1;
+	}
 	100% {
 		background-position: right center;
+		opacity: 0;
 	}
 }
 /* Efek sprite animasi fire */
@@ -1482,6 +1496,8 @@ a.btn-begin {
 	height:300px;
 	background-size:12000px 300px;
 	background:url(../img/rocket-smoke.png) no-repeat left top;
+	display: none;
+	opacity: 0;
 }
 .rocket-holder.active .rocket {
 	-webkit-animation:shake2 .1s infinite;
@@ -1501,14 +1517,14 @@ a.btn-begin {
 	transition-delay:3s;
 	transform:translate3d(0,40%,0) scale(1);
 }
-.rocket-holder.active .smoke-animation {	
-	
-	-webkit-animation:smoke 1s steps(9) infinite linear;
-	animation:smoke 1s steps(9) infinite linear;
+.rocket-holder.active .smoke-animation {
+	display: block;
+	-webkit-animation:smoke 1s steps(9) infinite;
+	animation:smoke 1s steps(9) infinite;
 	-webkit-animation-iteration-count:1;
 	animation-iteration-count:1;
 	-webkit-animation-delay:1s;
-	animation-delay:1s;	
+	animation-delay:1s;
 }
 .btn-launch {
 	width: 0.51%;
