--- a/css/app.css
+++ b/css/app.css
@@ -1101,10 +1101,6 @@ body.disable-nav .draggie.drag-next { -webkit-transform:translateX(100px);transf
 		padding: 1rem 2rem;
 		text-align: center;
 		text-shadow:-2px 1px 2px rgba(0,0,0,.3);
-/*
-	background:url(../img/lobby-monitor.png) no-repeat center;
-	background-size:cover;
-	*/
 }
 
 .typed-cursor{
@@ -2257,6 +2253,7 @@ a.btn-begin {
 	#lobby-content {
 		top:10%; width:380px;
 		margin-left:-190px;
+		left:50%;
 	}
 	.skip-container { bottom:5%;}
 }
