--- a/css/app.css
+++ b/css/app.css
@@ -1531,11 +1531,10 @@ a.btn-begin {
 	display: block;
 	width: 100%;
 	height: 100%;
-	background: url(../img/launch-button.png) no-repeat center;
-	background-size: cover;
 }
 .btn-launch img {
 	display: block;
+	width:100%; height:auto;
 }
 
 /* Outspace Section */
