--- a/css/app.css
+++ b/css/app.css
@@ -1527,15 +1527,15 @@ a.btn-begin {
 .btn-launch span {
 	position: relative;
 	z-index: 5;
+	text-indent: -9999px;
 	display: block;
 	width: 100%;
 	height: 100%;
-	z-index: 91;
-	background-size:cover;
+	background: url(../img/launch-button.png) no-repeat center;
+	background-size: cover;
 }
 .btn-launch img {
 	display: block;
-	width:100%; height:auto;
 }
 
 /* Outspace Section */
