--- a/css/app.css
+++ b/css/app.css
@@ -1493,8 +1493,8 @@ a.btn-begin {
 	animation:shake2 .1s infinite;
 }
 .rocket-holder.active .fire-animation {
-	-webkit-animation:2s steps(9, end) 0s normal none infinite running mascot;
-	animation:2s steps(9, end) 0s normal none infinite running mascot;
+	-webkit-animation:mascot 2s steps(9) infinite;
+	animation:mascot 2s steps(9) infinite;
 	-webkit-transition:transform ease 3s;
 	-webkit-transition-delay:3s;
 	-webkit-transform:translate3d(0,40%,0) scale(1);
