--- a/css/app.css
+++ b/css/app.css
@@ -548,8 +548,10 @@ span.lines {
 	border-radius: 4px;
 	transition: all ease-in-out .5s;
 	opacity: 1;
+	cursor:pointer;
 }
 .top-nav li a:hover {
+	-webkit-box-shadow:none;
 	box-shadow: 0 0 6px 1px #fff;
 	opacity: 1
 }
